working on handler, should complete most of the code today.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,18 +2,44 @@
 api-core:
   project-id: zl-win-nodes
   short-version: beta
-  gcp-api: https://www.googleapis.com/compute/v1/projects
-  grid-default:
+  gcp-api-url: https://www.googleapis.com/compute/v1/projects
+  gce-timeout-millis: 360000
+  gce-zonal-reattempt-errors:
+    - ZONE_RESOURCE_POOL_EXHAUSTED
+    - QUOTA_EXCEEDED
+  gce-reattempt-zones: # make sure we exclude the zone coming in with request from this list.
+    - us-central1-a
+    - us-central1-b
+    - us-central1-c
+    - us-central1-f
+    - us-east1-b
+    - us-east1-c
+    - us-east1-d
+    - us-east4-a
+    - us-east4-b
+    - us-east4-c
+    - us-west1-a
+    - us-west1-b
+    - us-west1-c
+    - us-west2-a
+    - us-west2-b
+    - us-west2-c
+  grid-defaults:
     machine-type: n1-standard-2
     network: zl-default-vpc
     service-account: zl-selenium-grid@zl-win-nodes.iam.gserviceaccount.com
-    tags:
+    tags: # these tags are applicable to generated grid for all purposes.
+      - zl-selenium-grid
       - elasticsearch-client
-    labels:
-      platform: windows
+    labels: # we should specify only instance specific labels, no labels common with image.
       is-production-instance: true
       zl-selenium-grid: true
-    metadata:
+      locked-by-build: NONE
+      is-deleting: false
+    metadata: # specify only metadata that can be given a default.
       time-zone-with-dst: Greenwich Standard Time
+    image-specific-labels-key: # Label keys in image those don't hold the same value as in a grid.  
+      - source_image_family
+      - min-on-demand-test-vm
 ---
 spring.profiles.active=production
