made APICoreProperties, RequestGridCreate immutable, fixed almost all tests, introduced a new resource updater for fingerprint based resource updatesand finished unit tests with fixes and strict stubbing checks. currently working on writing more e2e tests

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <version>${junit-jupiter.version}</version><!--$NO-MVN-MAN-VER$-->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version><!--$NO-MVN-MAN-VER$-->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
