completed e2e tests, working on fixing unit test

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,4 +48,5 @@ api-core:
       labels.is-deleting: false
     image-search-params:
       labels.platform: windows
+    max-stopped-instance-in-search: 10
 ---
