working on containerization, proxy and kubernetes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 # using placeholders, @Value annotations or Environment. This saves us from loading yaml properties
 # file into Environment.
 app-short-version=beta
+STACKDRIVER_LOG_NAME=app-zl-wzgp.log
