added support for externalIP on grid instances, bumped version to 0.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.zylitics</groupId>
   <artifactId>zl-wzgp</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <!-- TODO: !!! This version is used in these places, kubernetes deployment files, image names in deployment files,
+    TODO: openapi specification. Once updated, change all those places too. !!! -->
+  <version>0.1.1</version>
   <name>zl-wzgp</name>
   <url>http://maven.apache.org</url>
   <properties>
