--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <groupId>com.zylitics</groupId>
   <artifactId>zl-wzgp</artifactId>
   <!-- TODO: !!! This version is used in these places, kubernetes deployment files, image names in deployment files,
-    TODO: openapi specification. Once updated, change all those places too. !!! -->
-  <version>0.1.1</version>
+       openapi specification. Once updated, change all those places too. !!! -->
+  <version>0.1.2-SNAPSHOT</version>
   <name>zl-wzgp</name>
   <url>http://maven.apache.org</url>
   <properties>
