--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ api-core:
   grid-defaults:
     machine-type: n1-standard-2
     network: zl-default-vpc
-    service-account: zl-wzgp@zl-win-nodes.iam.gserviceaccount.com
+    service-account: zl-selenium-grid@zl-win-nodes.iam.gserviceaccount.com
     tags: # these tags are applicable to generated grid for all purposes.
       - zl-selenium-grid
       - elasticsearch-client
