--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <google-auth-library-oauth2-http.version>0.16.2</google-auth-library-oauth2-http.version>
     <stackdriver.logback.version>0.111.0-alpha</stackdriver.logback.version>
     <compute.api.version>v1-rev20190825-1.30.3</compute.api.version>
+    <google.cloud.storage.version>1.100.0</google.cloud.storage.version>
+    <google.cloud.kms.version>1.34.0</google.cloud.kms.version>
     <guava.version>28.0-jre</guava.version>
     <jib.maven.plugin.version>1.6.1</jib.maven.plugin.version>
     <skipTest>false</skipTest>
@@ -53,6 +55,18 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-storage</artifactId>
+      <version>${google.cloud.storage.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-kms</artifactId>
+      <version>${google.cloud.kms.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
