--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,21 @@
   <name>zl-wzgp</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <mockito.version>3.0.0</mockito.version>
+    <compute-api.version>v1-rev20190825-1.30.3</compute-api.version>
     <google-auth-library-oauth2-http.version>0.16.2</google-auth-library-oauth2-http.version>
-    <stackdriver.logback.version>0.111.0-alpha</stackdriver.logback.version>
-    <compute.api.version>v1-rev20190825-1.30.3</compute.api.version>
-    <google.cloud.storage.version>1.100.0</google.cloud.storage.version>
-    <google.cloud.kms.version>1.34.0</google.cloud.kms.version>
+    <google-cloud-kms.version>1.38.0</google-cloud-kms.version>
+    <google-cloud-storage.version>1.107.0</google-cloud-storage.version>
     <guava.version>28.0-jre</guava.version>
-    <jib.maven.plugin.version>1.6.1</jib.maven.plugin.version>
-    <skipTest>false</skipTest>
+    <jib-maven-plugin.version>1.8.0</jib-maven-plugin.version>
+    <stackdriver-logback.version>0.117.0-alpha</stackdriver-logback.version>
+
     <projectId>zl-win-nodes</projectId>
+    <skipTest>false</skipTest>
   </properties>
   <parent>
     <groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>2.1.6.RELEASE</version>
+	  <artifactId>spring-boot-starter-parent</artifactId>
+	  <version>2.3.0.RELEASE</version>
   </parent>
   <dependencies>
     <dependency>
@@ -39,12 +39,12 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-logging-logback</artifactId>
-      <version>${stackdriver.logback.version}</version>
+      <version>${stackdriver-logback.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-compute</artifactId>
-      <version>${compute.api.version}</version>
+      <version>${compute-api.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.auth</groupId>
@@ -57,15 +57,23 @@
       <version>${guava.version}</version>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
-      <version>${google.cloud.storage.version}</version>
+      <version>${google-cloud-storage.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-kms</artifactId>
-      <version>${google.cloud.kms.version}</version>
+      <version>${google-cloud-kms.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -78,27 +86,6 @@
       <artifactId>spring-boot-starter-webflux</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -109,7 +96,7 @@
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
-        <version>${jib.maven.plugin.version}</version>
+        <version>${jib-maven-plugin.version}</version>
         <configuration>
           <from><!-- we'll use openjdk for linux servers -->
             <!-- TODO: revert to non-debug image once going to production, using this for busybox to ssh into container -->
