--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
   <properties>
     <compute-api.version>v1-rev20190825-1.30.3</compute-api.version>
     <google-auth-library-oauth2-http.version>0.16.2</google-auth-library-oauth2-http.version>
-    <google-cloud-kms.version>1.38.0</google-cloud-kms.version>
-    <google-cloud-storage.version>1.107.0</google-cloud-storage.version>
+    <google-cloud-kms.version>1.40.2</google-cloud-kms.version>
+    <google-cloud-storage.version>1.113.4</google-cloud-storage.version>
+    <jib-maven-plugin.version>2.6.0</jib-maven-plugin.version>
+    <stackdriver-logback.version>0.118.7-alpha</stackdriver-logback.version>
     <guava.version>28.0-jre</guava.version>
-    <jib-maven-plugin.version>1.8.0</jib-maven-plugin.version>
-    <stackdriver-logback.version>0.117.0-alpha</stackdriver-logback.version>
 
     <projectId>zl-win-nodes</projectId>
     <skipTest>false</skipTest>
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-parent</artifactId>
-	  <version>2.3.0.RELEASE</version>
+	  <version>2.4.0</version>
   </parent>
   <dependencies>
     <dependency>
